...
    "July - Sept",
    "Oct - Dec",
    "Help me decide",
  ];
  final List<String> _studyLevels = [
    "Undergraduate",
    "Post graduate",
    "Doctorate",
    "Other",
  ];


  // Getters
...
