...
              size: 100,
              color: Color(0xFFBF0C0F),
            ),
          ),
          const SizedBox(height: 40),
          const Text(
            "Registration Successful!",
            textAlign: TextAlign.center,
            style: TextStyle(
              fontSize: 32,
              fontWeight: FontWeight.w800,
              color: Color(0xFF05345C),
              letterSpacing: -0.5,
...
